--- a/src/styles/Perfil.css
+++ b/src/styles/Perfil.css
@@ -79,7 +79,7 @@
 
 
 .perfil-btn {
-  background-color: #007bff;
+  background-color: #445b74;
   color: white;
   padding: 12px 25px;
   border: none;
@@ -91,7 +91,7 @@
 }
 
 .perfil-btn:hover {
-  background-color: #0056b3;
+  background-color: #062f5c;
 }
 
 
